# pcs

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
app/: CMakeLists.txt  pad.cpp  pad.h  pcs.cpp
app/examples/: merge.h  pad.cpp
app/examples/experimental/: experimental.h  experimental2.h
app/examples/hinge/: hinge.cpp  hinge.h
app/examples/merge/: merge.cpp  merge.h
app/examples/pad/: pad.cpp  pad.h
app/runner/: runner.cpp  runner.h
benchmarks/: CMakeLists.txt  memory_manager.h
benchmarks/controller/: generate.cpp  hinge.cpp  hinge_resources.cpp  hinge_resources_best.cpp  pad.cpp  test_models.cpp  test_models2.cpp  test_models3.cpp  test_models4.cpp  topology.cpp
benchmarks/experimental/: experimental.cpp
benchmarks/output 15-05-23/: big1.txt  big2.txt  big3.txt  hinge resources 1.txt  hinge resources 2.txt  hinge resources 3.txt  hinge1.txt  hinge2.txt  hinge3.txt  incremental122-1.txt  incremental122-2.txt  incremental122-3.txt  medium1.txt  medium2.txt  medium3.txt  min resources 1-1.txt  min resources 1-2.txt  min resources 1-3.txt  min resources 2&3-1.txt  min resources 2&3-2.txt  min resources 2&3-3.txt  min trans 1-1.txt  min trans 1-2.txt  min trans 1-3.txt  min trans 2&3-1.txt  min trans 2&3-2.txt  min trans 2&3-3.txt  small1.txt  small2.txt  small3.txt
benchmarks/topology/: range.cpp  topology.cpp
benchmarks/topology/complete/: range.cpp
data/: lts3.txt
data/ExperimentsRecipe/: recipe4R.json
data/adaptive/: Resource1.txt  recipe.json
data/best/: Resource1.txt  Resource2.txt  Resource3.txt  recipe.json
data/hinge/: Resource2.txt  Resource3.txt  Resource4.txt  Resource5.txt  costs.txt  recipe.json
data/hinge/experiments/: recipe2R.json  recipe3R.json
data/hinge2/: Resource2.txt  Resource3.txt  Resource4.txt  Resource5.txt  costs.txt
data/hinge2/experiments/: recipe3R.json  recipe4R.json
data/lts/: lts1.txt  lts3.txt  lts4.txt
data/pad/: Resource1.txt  Resource2.txt  Resource3.txt  Resource4.txt  Resource5.txt  r1.txt  r3.txt  r4.txt  r5.txt  recipe.json  recipe_full.json  recipe_s.json
data/unify/: Resource1.txt  Resource2.txt  Resource3.txt  recipe.json  recipe_fail.json
docs/: overview.md
scripts/: hinge_graphviz.bat  merge_graphviz.bat  pad_graphviz.bat
src/: CMakeLists.txt
src/pcs/: CMakeLists.txt
src/pcs/common/: directory.cpp  directory.h  empty.h  log.h  pch.h  strings.cpp  strings.h  vec_comma_ostream.h
src/pcs/controller/: controller.cpp  controller.h  core.cpp  core.h  highlighter.cpp  highlighter.h  parts.cpp  parts.h  plan_transition.cpp  plan_transition.h  realisability.cpp  realisability.h  topology.cpp  topology.h  unify.cpp  unify.h
src/pcs/controller/solvers/: best.cpp  best.h  dfs.cpp  dfs.h  local_best.cpp  local_best.h  parse_costs.cpp  parse_costs.h
src/pcs/environment/: environment.cpp  environment.h  writers.cpp  writers.h
src/pcs/lts/: export.cpp  export.h  lts.cpp  lts.h  merge.cpp  merge.h  parser.cpp  parser.h  parsers.cpp  parsers.h  state.cpp  state.h  transition.h  writers.cpp  writers.h
src/pcs/lts/parsers/: parsers.h  state.cpp  state.h  string_operation.cpp  string_operation.h  string_string.cpp  string_string.h  transition.cpp  transition.h
src/pcs/machine/: machine.cpp  machine.h  writers.cpp  writers.h
src/pcs/operation/: composite.cpp  composite.h  guard.cpp  guard.h  label.cpp  label.h  nop.cpp  nop.h  observable.cpp  observable.h  operation.cpp  operation.h  parameter.cpp  parameter.h  parameterized_op.cpp  parameterized_op.h  parameters.cpp  parameters.h  task_expression.cpp  task_expression.h  transfer.cpp  transfer.h  transfer_hash.h
src/pcs/operation/parsers/: label.cpp  parameterized_op.cpp  parameterized_op.h  parsers.h
src/pcs/product/: operation.cpp  operation.h  parser.cpp  parser.h  recipe.cpp  recipe.h
src/pcs/product/parsers/: recipe.cpp  recipe.h
src/pcs/system/: system.cpp  system.h  writers.cpp  writers.h
src/pcs/topology/: complete.cpp  complete.h  core.cpp  core.h  incremental.cpp  incremental.h  partial.cpp  partial.h  resource.cpp  resource.h  stitch.cpp  stitch.h  topology.cpp  topology.h
tests/: CMakeLists.txt
tests/controller/: best.cpp  controller.cpp  parse_costs.cpp  parts.cpp  topology.cpp  unify.cpp
tests/controller/testdata/: lts_1_self_merge.txt  pad.txt
tests/controller/testdata/best/: best.txt  costs_3.txt  dfs.txt
tests/controller/testdata/pad/: controller.txt
tests/lts/: lts.cpp  merge.cpp  parser.cpp  parsers.cpp
tests/lts/testdata/: lts1.txt  lts4.txt  lts_1.json  lts_1.txt  lts_1_self_merge_expected.txt  lts_2.txt
tests/operation/: composite.cpp
tests/operation/parsers/: label.cpp  parameterized_op.cpp
tests/product/: parser.cpp
tests/product/testdata/: recipe1.json  recipe_1.json
tests/topology/: complete.cpp  topology.cpp
tests/topology/testdata/: lts2.txt  lts4.txt  lts_1_2_3_4_merge.txt  lts_1_2_merge.txt  lts_1_self_merge.txt  r1_5_merge.txt
tests/topology/testdata/expected/: lts_1_2_merge.txt  lts_1_self_merge.txt  r1_5_merge.txt
